[package]
name = "motion_modeler_ros2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe_drive = "0.3.5"

serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.41"

[package.metadata.ros]
safe_drive_version = "0.3.5"